tests/example_pods_w_same_owner_and_labels_gap_banp_good/banp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    pods:
      podSelector:
        matchLabels:
          app: pod3
  egress:
  - name: "deny-everything" 
    action: "Deny"
    to:
    - pods:
        podSelector:
          matchLabels:
            security: internal
