tests/example_pods_w_same_owner_and_labels_gap_banp_good/pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    kubernetes.io/metadata.name: default
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    security: internal
    app: command-selector
    tier: agent
  ownerReferences:
    - name: internal-security
      controller: true
spec:
  containers:
    - name: myfirstcontainer
      image: pod1image

---
# a pod in same owner is pod-1 but some different labels
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    security: internal
    app: query-selector
    tier: analyzer
  ownerReferences:
    - name: internal-security
      controller: true
spec:
  containers:
    - name: mycontainer
      image: pod2image

---
# another pod in default ns - not having an owner
apiVersion: v1
kind: Pod
metadata:
  name: pod-3
  labels: 
    app: pod3
spec:
  containers:
    - name: mycontainer
      image: pod3image
