test_outputs/connlist/example_pods_w_same_owner_and_labels_gap_banp_good_connlist_output.txt
0.0.0.0-255.255.255.255 => default/internal-security[Pod] : All Connections
0.0.0.0-255.255.255.255 => default/pod-3[Pod] : All Connections
default/internal-security[Pod] => 0.0.0.0-255.255.255.255 : All Connections
default/internal-security[Pod] => default/pod-3[Pod] : All Connections
default/pod-3[Pod] => 0.0.0.0-255.255.255.255 : All Connections
